--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Josh Endemann Portfolio</title>
+	<title>Josh Endemann</title>
 	<link rel="shortcut icon" href="images/joshfavicon.png" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.production.css">
