--- a/work.html
+++ b/work.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Josh Endemann</title>
   <link rel="shortcut icon" href="img/joshfavicon.png" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
 
   <!-- Header including the logo and main navigation -->
@@ -18,7 +21,7 @@
         <li role="presentation">
           <a href="index.html" role="menuitem" class="navigation-list_item navigation-list_item--active">Home</a>
         </li>
-        <li role="presenetation">
+        <li role="presentation">
           <a href="about.html" role="menuitem" class="navigation-list_item">About</a>
         </li>
         <li role="presentation">
@@ -38,53 +41,145 @@
       <h1>
         Work
       </h1>
-      <div class="grid">
+
+      <div class="grid-container" display="grid" height="400px" align-content="space-evenly">
+
+
         <div class="grid_item">
           <h2>
-            Project 1
+            Pokedex App
           </h2>
           <p>
-            Within this project, I was responsible for the frontend.  It's written in React.js.  Additionally, I've created the HTML and CSS templates.
+            This project was my introduction to JavaScript. It is a simple client-side application and it communicates
+            with an external API.
           </p>
-          <a href="#" rel="#">See project on GitHub</a>
+          <p class="project-tech">
+            Technology Used: HTML, CSS, JavaScript, Bootstrap, Prettier, External API (Pokemon API).
+          </p>
+          <div class="project-links">
+            <p>
+              <a href="https://jahend412.github.io/Pokedex/" target="new"> <img class="pokedexpic" src="img/pokedex.png"
+                  width="400" height="400" alt="Project Pic!"> </a>
+            </p>
+            <p>
+              <a href="https://github.com/jahend412/Pokedex" rel="external">Check out the GitHub repository</a>
+            </p>
+          </div>
         </div>
+
+
         <div class="grid_item">
           <h2>
-            Project 2
+            myMovie API
           </h2>
-          <p>
-            Within this project, I was responsible for the frontend.  It's written in React.js.  Additionally, I've created the HTML and CSS templates.
+          <P class="project-text">
+            This project is the server-side component for the MyFlix client-side (both React & Angular) apps in my
+            portfolio.
+            It provides users with access to information about movies, including their genres & directors. Users are
+            able to sign up, update info, and create/edit a list of favorite movies.
           </p>
-          <a href="#" rel="#">See project on GitHub</a>
-        </div>
-        <div class="grid_item">
-          <h2>
-            Project 3
-          </h2>
-          <p>
-            Within this project, I was responsible for the frontend.  It's written in React.js.  Additionally, I've created the HTML and CSS templates.
+          <p class="project-tech">
+            Technology Used: JavaScript, Node.js, Express, MongoDB, Mongoose, Postman, Heroku.
           </p>
-          <a href="#" rel="#">See project on GitHub</a>
-        </div>
-        <div class="grid_item">
-          <h2>
-            Project 4
-          </h2>
-          <p>
-            Within this project, I was responsible for the frontend.  It's written in React.js.  Additionally, I've created the HTML and CSS templates.
-          </p>
-          <a href="#" rel="#">See project on GitHub</a>
-        </div>
-        <div class="grid_item">
-          <h2>
-            Project 5
-          </h2>
-          <p>
-            Within this project, I was responsible for the frontend.  It's written in React.js.  Additionally, I've created the HTML and CSS templates.
-          </p>
-          <a href="#" rel="#">See project on GitHub</a>
-        </div>
-      </div>
+          <div class="project-links">
+            <p>
+              <a href="https://github.com/jahend412/My_Movie_api/blob/main/README.md" target="new"> <img class="apipic"
+                  src="img/api.png" width="400" height="400" alt="Project Pic!"> </a>
+            </p>
+            <p>
+              <a href="https://github.com/jahend412/My_Movie_api" rel="external">Check out the GitHub repository </a>
+            </p>
+          </div>
+
+
+          <div class="grid_item">
+            <h2>
+              myMovie Client (React)
+            </h2>
+            <pclass="project-text">
+              This project is the React based client-side component for the MyFlix application based on my existing
+              server-side code (REST API and database).
+              Users can register, login, view movie info (including genres & directors), filter movies, add/remove
+              favorite movies to a user specific favorites list, update user info, as well as delete their accounts
+              entirely.
+              </p>
+              <p class="project-tech">
+                Technology Used: JavaScript, React, Bootstrap, Redux, Parcel.
+              </p>
+              <div class="project-links">
+                <p>
+                  <a href="https://mymovieapp44.netlify.app/" target="new"> <img class="reactpic" src="img/react.png"
+                      width="400" height="400" alt="Project Pic!"> </a>
+                </p>
+                <p>
+                  <a href="https://github.com/jahend412/myMovie-client" rel="external">Check out the GitHub
+                    repository</a>
+                </p>
+              </div>
+
+              <div class="grid_item">
+                <h2>
+                  myMovie client (Angular)
+                </h2>
+                <p>
+                  The client-side for an application called myFlix based on existing server-side code (REST API and
+                  database), built with TypeScript/Angular.
+                  After the user creates an account, the app provides her with information about selected movies, as
+                  well as the respective directors and genres.
+                  The user can add/remove favorite movies and manage her account data.
+                </p>
+                <p class="project-tech">
+                  Technology Used: TypeScript, Angular, Angular Material.
+                </p>
+                <p>
+                  <a href="https://jahend412.github.io/myMovie-Angular-client/welcome" target="new"> <img
+                      class="angularpic" src="img/angular.png" width="400" height="400" alt="Project Pic!"> </a>
+                </p>
+                <a href="https://github.com/jahend412/myMovie-Angular-client" rel="external">Check out the GitHub
+                  repository</a>
+              </div>
+
+              <div class="grid_item">
+                <h2>
+                  Meet app
+                </h2>
+                <P class="project-text">
+                  My Meet App project is a PWA made using React and following a test driven development approach that
+                  makes use of Google's calendar API.
+                  The purpose of the project (completed as part of my course for CareerFoundry) was primarily to
+                  introduce concepts like TDD, serverless functions, progressive web apps, and data visualization!
+                </p>
+                <p class="project-tech">
+                  Technology Used: HTML, CSS, JavaScript, React, AWS Lambda, Google API, Jest, Puppeteer, Data
+                  Visualization via Recharts.
+                </p>
+                <div class="project-links">
+                  <p>
+                    <a href="https://jahend412.github.io/Meet" target="new"> <img class="meetpic" src="#"
+                        alt="Project Pic!"> </a>
+                  </p>
+                  <p>
+                    <a href="https://github.com/jahend412/Meet" rel="external">Check out the GitHub repository</a>
+                  </p>
+                </div>
+
+
+                <div class="grid_item">
+                  <h2>
+                    Chat App
+                  </h2>
+                  <p>
+                    Technology Used: JavaScript, React Native, Firebase, Expo, Gifted Chat.
+                  </p>
+                  <div class="project-links">
+
+                    <p>
+                      <a href="https://github.com/jahend412/chatApp" rel="external">Check out the GitHub repository</a>
+                    </p>
+                  </div>
+                </div>
+
+              </div>
     </section>
   </main>
 
@@ -110,4 +205,5 @@
 
   <script src="js/tota11y.min.js"></script>
 </body>
+
 </html>
