--- a/work.html
+++ b/work.html
@@ -42,31 +42,7 @@
         Work
       </h1>
 
-      <div class="grid-container" display="grid" height="400px" align-content="space-evenly">
-
-
-        <div class="grid_item">
-          <h2>
-            Pokedex App
-          </h2>
-          <p>
-            This project was my introduction to JavaScript. It is a simple client-side application and it communicates
-            with an external API.
-          </p>
-          <p class="project-tech">
-            Technology Used: HTML, CSS, JavaScript, Bootstrap, Prettier, External API (Pokemon API).
-          </p>
-          <div class="project-links">
-            <p>
-              <a href="https://jahend412.github.io/Pokedex/" target="new"> <img class="pokedexpic" src="img/pokedex.png"
-                  width="400" height="400" alt="Project Pic!"> </a>
-            </p>
-            <p>
-              <a href="https://github.com/jahend412/Pokedex" rel="external">Check out the GitHub repository</a>
-            </p>
-          </div>
-        </div>
-
+      <div class="grid-container">
 
         <div class="grid_item">
           <h2>
@@ -84,102 +60,142 @@
           <div class="project-links">
             <p>
               <a href="https://github.com/jahend412/My_Movie_api/blob/main/README.md" target="new"> <img class="apipic"
-                  src="img/api.png" width="400" height="400" alt="Project Pic!"> </a>
+                  src="img/mongodb.png" width="100" height="100" alt="Project Pic!"> </a>
+              <br>
+              Click the image to check out documentation!
             </p>
             <p>
               <a href="https://github.com/jahend412/My_Movie_api" rel="external">Check out the GitHub repository </a>
             </p>
           </div>
+        </div>
 
 
-          <div class="grid_item">
-            <h2>
-              myMovie Client (React)
-            </h2>
-            <pclass="project-text">
-              This project is the React based client-side component for the MyFlix application based on my existing
-              server-side code (REST API and database).
-              Users can register, login, view movie info (including genres & directors), filter movies, add/remove
-              favorite movies to a user specific favorites list, update user info, as well as delete their accounts
-              entirely.
+        <div class="grid_item">
+          <h2>
+            myMovie client (Angular)
+          </h2>
+          <p>
+            The client-side for an application called myFlix based on existing server-side code (REST API and
+            database), built with TypeScript/Angular.
+            After the user creates an account, the app provides her with information about selected movies, as
+            well as the respective directors and genres.
+            The user can add/remove favorite movies and manage her account data.
+          </p>
+          <p class="project-tech">
+            Technology Used: TypeScript, Angular, Angular Material.
+          </p>
+          <p>
+            <a href="https://jahend412.github.io/my-Movie-Angular-client/welcome" target="new"> <img class="angularpic"
+                src="img/angular.png" width="200" height="200" alt="Project Pic!"> </a>
+            <br>
+            Click the image to check out the website!
+          </p>
+          <a href="https://github.com/jahend412/myMovie-Angular-client" rel="external">Check out the GitHub
+            repository</a>
+        </div>
+
+        <div class="grid_item">
+          <h2>
+            Chat App
+          </h2>
+          <p class="project-text">
+            This app uses React Native, Firebase, and Gifted Chat to create a Chat application. The user will be able to
+            login,
+            choose what background they want, and be able to use a textbox to chat with someone. This app uses Firebase
+            to store
+            the messages in a database.
+          </p>
+          <p class="project-tech">
+            Technology Used: JavaScript, React Native, Firebase, Expo, Gifted Chat.
+          </p>
+          <div class="project-links">
+
+            <p>
+              <a href="https://github.com/jahend412/chatApp" rel="external">Check out the GitHub repository</a>
+            </p>
+          </div>
+        </div>
+
+        <div class="grid_item">
+          <h2>
+            Pokedex App
+          </h2>
+          <p>
+            This project was my introduction to JavaScript. It is a simple client-side application and it communicates
+            with an external API.
+          </p>
+          <p class="project-tech">
+            Technology Used: HTML, CSS, JavaScript, Bootstrap, Prettier, External API (Pokemon API).
+          </p>
+          <div class="project-links">
+            <p>
+              <a href="https://jahend412.github.io/Pokedex/" target="new"> <img class="pokedexpic" src="img/pokedex.png"
+                  width="200" height="200" alt="Project Pic!"> </a>
+              <br>
+              Click the image to check out the website!
+            </p>
+            <p>
+              <a href="https://github.com/jahend412/Pokedex" rel="external">Check out the GitHub repository</a>
+            </p>
+          </div>
+        </div>
+
+        <div class="grid_item">
+          <h2>
+            Meet app
+          </h2>
+          <P class="project-text">
+            My Meet App project is a PWA made using React and following a test driven development approach that
+            makes use of Google's calendar API.
+            The purpose of the project (completed as part of my course for CareerFoundry) was primarily to
+            introduce concepts like TDD, serverless functions, progressive web apps, and data visualization!
+          </p>
+          <p class="project-tech">
+            Technology Used: HTML, CSS, JavaScript, React, AWS Lambda, Google API, Jest, Puppeteer, Data
+            Visualization via Recharts.
+          </p>
+          <div class="project-links">
+            <p>
+              <a href="https://jahend412.github.io/Meet" target="new"> <img class="meetpic" src="#" alt="Project Pic!">
+              </a>
+            </p>
+            <p>
+              <a href="https://github.com/jahend412/Meet" rel="external">Check out the GitHub repository</a>
+            </p>
+          </div>
+        </div>
+
+        <div class="grid_item">
+          <h2>
+            myMovie Client (React)
+          </h2>
+          <pclass="project-text">
+            This project is the React based client-side component for the MyFlix application based on my existing
+            server-side code (REST API and database).
+            Users can register, login, view movie info (including genres & directors), filter movies, add/remove
+            favorite movies to a user specific favorites list, update user info, as well as delete their accounts
+            entirely.
+            </p>
+            <p class="project-tech">
+              Technology Used: JavaScript, React, Bootstrap, Redux, Parcel.
+            </p>
+            <div class="project-links">
+              <p>
+                <a href="https://mymovieapp44.netlify.app/" target="new"> <img class="reactpic" src="img/reactApp.png"
+                    width="200" height="200" alt="Project Pic!"> </a>
+                <br>
+                Click the image to check out the website!
               </p>
-              <p class="project-tech">
-                Technology Used: JavaScript, React, Bootstrap, Redux, Parcel.
-              </p>
-              <div class="project-links">
-                <p>
-                  <a href="https://mymovieapp44.netlify.app/" target="new"> <img class="reactpic" src="img/react.png"
-                      width="400" height="400" alt="Project Pic!"> </a>
-                </p>
-                <p>
-                  <a href="https://github.com/jahend412/myMovie-client" rel="external">Check out the GitHub
-                    repository</a>
-                </p>
-              </div>
-
-              <div class="grid_item">
-                <h2>
-                  myMovie client (Angular)
-                </h2>
-                <p>
-                  The client-side for an application called myFlix based on existing server-side code (REST API and
-                  database), built with TypeScript/Angular.
-                  After the user creates an account, the app provides her with information about selected movies, as
-                  well as the respective directors and genres.
-                  The user can add/remove favorite movies and manage her account data.
-                </p>
-                <p class="project-tech">
-                  Technology Used: TypeScript, Angular, Angular Material.
-                </p>
-                <p>
-                  <a href="https://jahend412.github.io/myMovie-Angular-client/welcome" target="new"> <img
-                      class="angularpic" src="img/angular.png" width="400" height="400" alt="Project Pic!"> </a>
-                </p>
-                <a href="https://github.com/jahend412/myMovie-Angular-client" rel="external">Check out the GitHub
+              <p>
+                <a href="https://github.com/jahend412/myMovie-client" rel="external">Check out the GitHub
                   repository</a>
-              </div>
+              </p>
+            </div>
+        </div>
 
-              <div class="grid_item">
-                <h2>
-                  Meet app
-                </h2>
-                <P class="project-text">
-                  My Meet App project is a PWA made using React and following a test driven development approach that
-                  makes use of Google's calendar API.
-                  The purpose of the project (completed as part of my course for CareerFoundry) was primarily to
-                  introduce concepts like TDD, serverless functions, progressive web apps, and data visualization!
-                </p>
-                <p class="project-tech">
-                  Technology Used: HTML, CSS, JavaScript, React, AWS Lambda, Google API, Jest, Puppeteer, Data
-                  Visualization via Recharts.
-                </p>
-                <div class="project-links">
-                  <p>
-                    <a href="https://jahend412.github.io/Meet" target="new"> <img class="meetpic" src="#"
-                        alt="Project Pic!"> </a>
-                  </p>
-                  <p>
-                    <a href="https://github.com/jahend412/Meet" rel="external">Check out the GitHub repository</a>
-                  </p>
-                </div>
+      </div>
 
-
-                <div class="grid_item">
-                  <h2>
-                    Chat App
-                  </h2>
-                  <p>
-                    Technology Used: JavaScript, React Native, Firebase, Expo, Gifted Chat.
-                  </p>
-                  <div class="project-links">
-
-                    <p>
-                      <a href="https://github.com/jahend412/chatApp" rel="external">Check out the GitHub repository</a>
-                    </p>
-                  </div>
-                </div>
-
-              </div>
     </section>
   </main>
 
@@ -196,7 +212,8 @@
         <img src="img/twitterlogo.png" alt="Twitter">
       </a>
       <a href="https://www.linkedin.com/in/joshua-endemann-b86a47155/">
-        <img src="img/linkedinlogo.png" alt="Linked In"> <!--/www.linkedin.com/in/joshua-endemann-b86a47155/-->
+        <img src="img/linkedinlogo.png" alt="Linked In">
+        <!--/www.linkedin.com/in/joshua-endemann-b86a47155/-->
       </a><br>
       <a href="mailto:jahend44@gmail.com">Contact me</a>
     </div>
