--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<title>Josh Endemann Portfolio</title>
 	<link rel="shortcut icon" href="images/joshfavicon.png" type="image/x-icon">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+	<link rel="stylesheet" type="text/css"
+		href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.production.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body class="style">
 
 	<!-- Header including the logo and main navigation -->
@@ -16,7 +19,8 @@
 		<nav class="main-navigation page-header_item">
 			<ul role="menubar" class="navigation-list">
 				<li role="presentation">
-					<a href="index.html" role="menuitem" class="navigation-list_item navigation-list_item--active">Home</a>
+					<a href="index.html" role="menuitem"
+						class="navigation-list_item navigation-list_item--active">Home</a>
 				</li>
 				<li role="presenetation">
 					<a href="about.html" role="menuitem" class="navigation-list_item">About</a>
@@ -35,12 +39,11 @@
 
 	<main>
 		<div class="profile">
-			<img src="img/josh1.jpg" class="profile_portrait" alt="Josh Endemann Portrait">
+			<img src="img/josh1.jpeg" class="profile_portrait" alt="Josh Endemann Portrait">
 			<h1>Hello World</h1>
-			<p>My name is Josh Endemann.  I am a <span>web developer</span> from Wisconsin</p>
-			<a href="#">Check out some of my code</a><br>
-			<button type="button">Good Button</button><br>
-			<button class="button_secondary">Great Button</button>
+			<p>My name is Joshua Endemann. I am a <span>web developer</span> from Wisconsin!</p>
+			<a href="https://github.com/jahend412">Check out some of my code on GitHub!</a><br>
+
 		</div>
 	</main>
 
@@ -48,14 +51,15 @@
 	<footer class="page-footer">
 		<p>Find me on</p>
 		<div class="social-media">
-			<a href="https://github.com/jahend412">
+			<a class="soc-media-img" href="https://github.com/jahend412">
 				<img src="img/githublogo.png" alt="Github"> <!-- https://github.com/jahend412-->
 			</a>
 			<a href="https://twitter.com/joshendemann">
 				<img src="img/twitterlogo.png" alt="Twitter">
 			</a>
 			<a href="https://www.linkedin.com/in/joshua-endemann-b86a47155/">
-				<img src="img/linkedinlogo.png" alt="Linked In"> <!--/www.linkedin.com/in/joshua-endemann-b86a47155/-->
+				<img src="img/linkedinlogo.png" alt="Linked In">
+				<!--/www.linkedin.com/in/joshua-endemann-b86a47155/-->
 			</a><br>
 			<a href="mailto:jahend44@gmail.com">Contact me</a>
 		</div>
@@ -64,4 +68,5 @@
 
 	<script src="js/tota11y.min.js"></script>
 </body>
+
 </html>
