--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Contact</title>
   <link rel="shortcut icon" href="images/joshfavicon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet"> <!-- Lato font-->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -31,69 +33,96 @@
     </nav>
   </header>
 
-<main>
+  <main>
 
-  <h1>Contact</h1>
-  <div>
-    <p>
-      Feel free to share your email adress with me!
-    </p>
-    <form action="/login-form-action" method="post">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="user_email">
-      <button type="submit">Submit</button>
+    <h1>Contact</h1>
+    <div>
+      <p>
+        Feel free to share your email adress with me!
+      </p>
+      <form action="/login-form-action" method="post">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="user_email">
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+
+    <div>
+      <p>
+        Location: Kansasville, Wisconsin
+      </p>
+    </div>
+
+    <div>
+      <a href="mailto:jahend44@gmail.com">Jahend44@gmail.com</a><br>
+      Telephone <a href="tel:2624975489">Call - 262-497-5489</a><br>
+    </div>
+
+    <!-- A contact form for users to add their contact information-->
+    <div>
+      <form action="#" method="post" id="contact-form">
+        <fieldset>
+          <legend>Contact Me</legend>
+
+          <label for="contact-name">Your Name:</label>
+          <input type="text" id="contact-name" name="contact-name" required>
+
+          <label for="contact-email">E-mail: </label>
+          <input type="email" id="contact-email" required="">
+
+          <label for="contact-telephone">Phone: </label>
+          <input type="tel" id="contact-telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
+
+          <label for="contact-message">Message: (Max 240 characters) </label>
+          <textarea id="contact-message" required maxlength="240"></textarea>
+
+          <div class="checks">
+            <input type="checkbox" name="copyEmail" id="copyEmail">
+            <label for="copyEmail">Send a copy of your form to my email!</label>
+          </div>
+
+          <div class="checks">
+            <p>Preferred method of contact:</p>
+
+            <input type="radio" name="contact" id="contactEmail" value="email">
+            <label for="contactEmail">Email</label>
+
+            <input type="radio" name="contact" id="contactPhone" value="phone">
+            <label for="contactPhone">Phone</label>
+
+            <input type="radio" name="contact" id="contactText" value="text">
+            <label for="contactText">Text</label>
+
+          </div>
+
+    </div>
+    <input type="submit" value="Send message">
+    </fieldset>
     </form>
-  </div>
-
-  <div>
-    <p>
-      Location: Kansasville, Wisconsin
-    </p>
-  </div>
-
-  <div>
-    <a href="mailto:jahend44@gmail.com">Jahend44@gmail.com</a><br>
-    Tel <a href="tel:2624975489">Call - 2624975489</a><br>
-  </div>
-
-  <!-- A contact form for users to add their contact information-->
-  <div>
-    <form action="" method="post" id="contact-form">
-      <label class="standard-label" for="contact-name">Name</label>
-      <input type="text" id="contact-name" required>
-
-      <label class="standard-label" for="contact-email">E-mail: </label>
-      <input type="email" id="contact-email" required="">
-
-      <label class="standard-label" for="contact-telephone">Telephone: </label>
-      <input type="tel" id="contact-telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
-
-      <label class="standard-label" for="contact-message">Message: (Max 240 characters)</label>
-      <textarea id="contact-message" required maxlength="240"></textarea>
-      <input type="submit" value="Send message">
-    </form>
-  </div>
-</main>
+    </div>
+  </main>
 
 
 
 
-<footer class="page-footer">
-  <p>Find me on</p>
-  <div class="page-footer__socialMedia">
-    <a href="https://github.com/jahend412">
-      <img src="img/githublogo.png" alt="Github"> <!-- https://github.com/jahend412-->
-    </a>
-    <a href="https://twitter.com/joshendemann">
-      <img src="img/twitterlogo.png" alt="Twitter">
-    </a>
-    <a href="https://www.linkedin.com/in/joshua-endemann-b86a47155/">
-      <img src="img/linkedinlogo.png" alt="Linked In"> <!--/www.linkedin.com/in/joshua-endemann-b86a47155/-->
-    </a><br>
-    <a href="mailto:jahend44@gmail.com">Contact me</a>
-  </div>
-</footer>
+  <footer class="page-footer">
+    <p>Find me on</p>
+    <div class="page-footer__socialMedia">
+      <a href="https://github.com/jahend412">
+        <img src="img/githublogo.png" alt="Github"> <!-- https://github.com/jahend412-->
+      </a>
+      <a href="https://twitter.com/joshendemann">
+        <img src="img/twitterlogo.png" alt="Twitter">
+      </a>
+      <a href="https://www.linkedin.com/in/joshua-endemann-b86a47155/">
+        <img src="img/linkedinlogo.png" alt="Linked In">
+        <!--/www.linkedin.com/in/joshua-endemann-b86a47155/-->
+      </a><br>
+      <a href="mailto:jahend44@gmail.com">Contact me</a>
+    </div>
+  </footer>
 
   <script src="js/tota11y.min.js"></script>
 </body>
+
 </html>
